ViTables ChangeLog
==================
** January 24, 2013 **
The license of plugins and some example scripts has been updated.

Some more copyright notices have been updated.

The copyright notice of the license has been updated.

The launcher script has been modified.

Now it can be launched by itself (instead of calling python in the command
line)

** January 23, 2013 **
The leafView.py module has been revamped.

Several data navigation bugs have been hopefuly fixed. The code has been
refactored and simplified.

** November 28, 2011 **
Table navigation using the mouse has been debugged.

Sometimes strange jumps occurred after a buffer fault (a certain amount of rows
was skipped) making dataset browsing somewhat unpredictable. These jumps have
been removed.

** November 18, 2011 **
The Makefile for building the Mac OS X bundle has been updated.

The path to the standard Python has been fixed. The filename of the PDF
version of the Users Guide has been updated. Also the Readme-MacOSX.rtf has
been updated (reference to Carabos coop has been removed).

** October 27, 2011 **
The vitables launcher script has been updated.

Following the suggestions made by Dav Clark in the Users Group, the usage of
pythonw on MacOSX has been dropped.

** October 23, 2011 **
The abbility for creating the documentation has been removed from setup.py.

As the distributed tarball contains the complete documentation there is
no need for building it via setup.py. Now the documentation is built with a
module not intended for distribution.

In addition, the Users Guide has been updated.

** October 17, 2011 **
Merged a pull request from kisielk/master (a ViTables fork owner).

The merge fixes problems with CRLF endings in the vitables launcher script
(introduced probably when pushing changes to the repo under MSWindows). It also
fixes a small bug in the message box for unsupported datatypes.

** October 06, 2011 **
The setup.py module has been debugged.
